--- a/simplezat/ratings/templates/comments.html
+++ b/simplezat/ratings/templates/comments.html
@@ -2,9 +2,8 @@
 
 {% spaceless %}
 <form action="." method="post">
-{% csrf_token %}
-<textarea name="comment"></textarea>
-<input type="hidden" name="rating" value="{{ rating }}">
-<input type="submit" value="Submit">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
 </form>
 {% endspaceless %}
